@@ -39,6 +39,7 @@
     should open panel context menu instead.
 * System critical temperature level in 'thermal' plugin now is properly
     ignored if manual levels are active.
+* Fixed click on 'menu' plugin, only image was clickable, not whole area.
 
 0.7.2
 -------------------------------------------------------------------------
